# kingsmith-ftms-bridge

./: .gitignore  README.md  install.sh  kingsmith-ftms-bridge.service  pyproject.toml  requirements.txt  run.sh
src/kingsmith_ftms_bridge/: __init__.py  bridge.py  config.py  ftms_server.py  main.py  walkingpad.py  web.py
