[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kingsmith-ftms-bridge"
version = "1.0.0"
description = "Bridge Kingsmith WalkingPad R2 to FTMS for Apple Fitness and other apps"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kingsmith FTMS Bridge" }]
keywords = ["bluetooth", "ble", "ftms", "treadmill", "kingsmith", "walkingpad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]

dependencies = [
    "bleak>=0.21.0",
    "bluez-peripheral>=0.1.1",
    "dbus-fast>=2.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
kingsmith-ftms-bridge = "kingsmith_ftms_bridge.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
